add js to listen html on search courses options

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     
     <title>Course web</title>
     
-    <script defer src="test.js"></script>
+    <script defer src="index.js"></script>
 </head>
 
 
